Changes

from version 1.31 to 1.32

improvement:
- support for pump drivers that have a unique ID


from version 1.30 to 1.31

improvement:
- better feedback if no SIX or pump driver was found during port scan

bugfixes:
- fix automatic reconnection when connection to SIX was lost
  and the port scan lasted long (many USB devices connected)
- fix inconsistent user interface wording
- avoid countless error messages when connection to pump driver was lost


from version 1.2.0 to 1.30

improvements:
- it is now possible to change the time format to [days:hours:minutes] by
  right-clicking in the chart and choosing the corresponding context menu entry
- it is now also possible to set the time format in the x-axis dialog

bugfixes:
- port scan progress bar did not properly close after the scanning
- assure that the specified y-axis chart range is used, also if there are notes


from version 1.1.1 to 1.2.0

improvements:
- notes are now stored together with the sensor data and will be read in
  when loading or appending a data file
- a progress bar is shown when scanning for SIX and pump drivers is performed
- when hovering with the mouse over a chart datapoint, the time is shown in the format
  days:hours:minutes to help distinguishing times of long measurements 

bugfixes:
- always display correctly when there is no connection
- display correct number of pumps and valves for loaded action files


from version 1.1.0 to 1.1.1

improvement:
- when changing chart axis range from 'automatic' propose sensible min/max values

bugfixes:
- fix several definition file handling issues
- fix bug that for existing data files the values were not properly recalculated
  when changing between raw and mmol/l values


from version 1.0.0 to 1.1.0

improvements:
- when a SIX measurement is running, the application icon changes to green
  to indicate this
- add always visible button to autoscale instead of the current chart's
  context menu entry to autoscale